tests/golden/snapshots/render_event__event_entry_many_fields.snap
---
source: tests/golden/render_event.rs
expression: out
---
#[event]
pub struct TradeSettled {
    pub buyer: Pubkey,
    pub seller: Pubkey,
    pub price: u64,
    pub memo: String,
}
