tests/golden/snapshots/render_event__event_entry_single_field.snap
---
source: tests/golden/render_event.rs
expression: out
---
#[event]
pub struct Deposited {
    pub amount: u64,
}
