tests/golden/snapshots/render_event__events_file_empty.snap
---
source: tests/golden/render_event.rs
expression: out
---
use anchor_lang::prelude::*;

// === sunscreen:auto-generated:begin segment=events version=1 generator=event ===
// === sunscreen:auto-generated:end segment=events ===
