tests/golden/snapshots/render_event__events_file_multiple_entries_order_preserved.snap
---
source: tests/golden/render_event.rs
expression: out
---
use anchor_lang::prelude::*;

// === sunscreen:auto-generated:begin segment=events version=1 generator=event ===
#[event]
pub struct Deposited {
    pub amount: u64,
}
#[event]
pub struct Ping {
}
#[event]
pub struct TradeSettled {
    pub buyer: Pubkey,
    pub seller: Pubkey,
    pub price: u64,
    pub memo: String,
}
// === sunscreen:auto-generated:end segment=events ===
