tests/golden/snapshots/render_event__events_file_single_entry.snap
---
source: tests/golden/render_event.rs
expression: out
---
use anchor_lang::prelude::*;

// === sunscreen:auto-generated:begin segment=events version=1 generator=event ===
#[event]
pub struct Deposited {
    pub amount: u64,
}
// === sunscreen:auto-generated:end segment=events ===
